style: remove code smells